fix paragraph text-align

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -63,7 +63,6 @@ h5 {font-size: 1.125em;}
 
 p {
     margin-bottom: 1.25em;
-    text-align: justify;
 }
 
 blockquote {
